--- a/libiqxmlrpc/version.h.in
+++ b/libiqxmlrpc/version.h.in
@@ -1,7 +1,7 @@
-#ifndef _LIBIQXMLRPC_VERSION_FILE_
-#define _LIBIQXMLRPC_VERSION_FILE_
+#ifndef LIBIQXMLRPC_VERSION_H
+#define LIBIQXMLRPC_VERSION_H
 
 #define PACKAGE "@PROJECT_NAME@"
 #define VERSION "@Libiqxmlrpc_VERSION@"
 
-#endif //_LIBIQXMLRPC_VERSION_FILE_
+#endif //LIBIQXMLRPC_VERSION_H
