Optimize Base64 decode with direct buffer writes (~70% faster)
Performance optimization:
- Replace push_back() with pre-allocated buffer and direct pointer writes
- Single-pass decode using pointer arithmetic
- Pre-allocate maximum possible output size, resize to actual after decode
- Throughput improvement: ~235 MB/s → ~400-500 MB/s (+70%)

Security hardening:
- Add overflow protection for both multiplication AND addition in size calc
- Fix potential integer overflow when (src_len * 3) is close to SIZE_MAX

Code quality:
- Add comprehensive benchmark suite for Base64 decode
- Add test for empty base64 decode path
- Add default case to switch for clang-tidy compliance

Benchmarked across 256B to 256KB payloads with and without whitespace.
All 17 test suites pass.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -121,6 +121,17 @@ add_custom_target(perf-e1-e3
     COMMENT "Running E1-E3 ostringstream optimization benchmarks..."
 )
 
+# Base64 decode optimization benchmark (separate - run with make perf-base64)
+add_executable(base64-benchmark-test test_base64_benchmark.cc)
+target_link_libraries(base64-benchmark-test iqxmlrpc ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES})
+
+add_custom_target(perf-base64
+    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/base64-benchmark-test
+    DEPENDS base64-benchmark-test
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Running Base64 decode optimization benchmarks..."
+)
+
 # Wire protocol compatibility test (requires external Python XML-RPC server)
 add_executable(wire-compatibility-test test_wire_compatibility.cc)
 target_link_libraries(wire-compatibility-test iqxmlrpc ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES} ${OPENSSL_LIBRARIES})
