Add Array::reserve() and comprehensive XML parsing benchmarks
Performance optimization:
- Add reserve() and capacity() methods to Array class
- Enables pre-allocation when array size is known (~9% improvement)
- capacity() marked noexcept for API consistency with std::vector

Unit tests:
- Add array_reserve_capacity test for new methods
- Covers: initial state, reserve(), push_back(), reserve smaller, clear()
- Edge case: reserve(0) verified as safe no-op

Benchmarks added (tests/test_xml_parsing_benchmark.cc):
- Request/response parsing throughput (various sizes)
- Namespace stripping approaches (erase vs substr)
- State machine lookup (linear vs hash)
- String copy reduction (copy vs buffer reuse)
- Value object allocation patterns
- Array/Struct access patterns
- Type checking performance

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -132,6 +132,17 @@ add_custom_target(perf-base64
     COMMENT "Running Base64 decode optimization benchmarks..."
 )
 
+# XML parsing optimization benchmark (separate - run with make perf-xml)
+add_executable(xml-parsing-benchmark-test test_xml_parsing_benchmark.cc)
+target_link_libraries(xml-parsing-benchmark-test iqxmlrpc ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES})
+
+add_custom_target(perf-xml
+    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/xml-parsing-benchmark-test
+    DEPENDS xml-parsing-benchmark-test
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Running XML parsing optimization benchmarks..."
+)
+
 # Wire protocol compatibility test (requires external Python XML-RPC server)
 add_executable(wire-compatibility-test test_wire_compatibility.cc)
 target_link_libraries(wire-compatibility-test iqxmlrpc ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES} ${OPENSSL_LIBRARIES})
