Implement M6: HTTP tokenization with string_view (~28% faster)
Replace std::string allocations with std::string_view during HTTP
request/response line parsing. The source string (head_line_) persists
in the Header object, making views safe to use within constructor scope.

Changes:
- Add split_by_whitespace_sv() and split_by_chars_sv() for zero-copy tokenization
- Update Request_header constructor to use std::vector<std::string_view>
- Update Response_header constructor similarly
- Update get_authinfo() to use string_view tokenization
- Remove unused original split_by_whitespace() and split_by_chars() functions
- Add comprehensive benchmark (test_http_tokenize_benchmark.cc)

Benchmark results (100k iterations):
- Request line parsing: 208.9 -> 150.1 ns/op (28% faster)
- Response line parsing: 189.0 -> 135.2 ns/op (28% faster)
- Long URI parsing: 389.6 -> 232.7 ns/op (40% faster)
- Realistic request parse: 219.1 -> 159.5 ns/op (27% faster)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -143,6 +143,17 @@ add_custom_target(perf-xml
     COMMENT "Running XML parsing optimization benchmarks..."
 )
 
+# M6 HTTP tokenization benchmarks (separate - run with make perf-http-tokenize)
+add_executable(http-tokenize-benchmark-test test_http_tokenize_benchmark.cc)
+target_link_libraries(http-tokenize-benchmark-test iqxmlrpc ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES})
+
+add_custom_target(perf-http-tokenize
+    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/http-tokenize-benchmark-test
+    DEPENDS http-tokenize-benchmark-test
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Running M6 HTTP tokenization benchmarks..."
+)
+
 # Wire protocol compatibility test (requires external Python XML-RPC server)
 add_executable(wire-compatibility-test test_wire_compatibility.cc)
 target_link_libraries(wire-compatibility-test iqxmlrpc ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES} ${OPENSSL_LIBRARIES})
