--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -34,12 +34,15 @@ env:
   REGRESSION_THRESHOLD: ${{ github.event.inputs.threshold || '15' }}
   # Relaxed threshold for high-variance benchmarks (tier 1)
   # perf_lockfree_queue_p90_latency: ~37% CI variance observed (scheduler jitter)
+  # perf_struct_access, perf_array_access, perf_array_iterate, perf_struct_iterate:
+  #   tight loops sensitive to instruction cache alignment (binary layout changes)
   RELAXED_THRESHOLD: '25'
-  RELAXED_BENCHMARKS: 'perf_lockfree_queue_p90_latency'
+  RELAXED_BENCHMARKS: 'perf_lockfree_queue_p90_latency,perf_struct_access,perf_array_access,perf_array_iterate,perf_struct_iterate'
   # Very high variance benchmarks (tier 2)
   # perf_string_to_int_new: extreme variance on CI (~70%)
+  # Sub-nanosecond benchmarks: 1 clock cycle of jitter causes 30-100% swings
   RELAXED_THRESHOLD_2: '70'
-  RELAXED_BENCHMARKS_2: 'perf_string_to_int_new'
+  RELAXED_BENCHMARKS_2: 'perf_string_to_int_new,perf_atomic_bool_write,perf_type_check_int_false,perf_type_check_int_true,perf_type_check_string_true'
 
 jobs:
   benchmark:
