Exclude tests from Coverity Scan analysis
Disable test compilation during Coverity scans to:
- Focus static analysis on library code only
- Reduce false positives from test-specific patterns
- Decrease submission tarball size (Coverity free tier has limits)

--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -78,7 +78,8 @@ jobs:
       run: |
         set -euo pipefail
         mkdir build && cd build
-        cmake -Dbuild_tests=ON \
+        # Disable tests - Coverity should only analyze library code, not test code
+        cmake -Dbuild_tests=OFF \
           -DCMAKE_CXX_FLAGS="-DBOOST_TIMER_ENABLE_DEPRECATED -Wall -Wextra" \
           ..
 
