Add unit tests and improve num_conv documentation
Address quality agent findings:

1. Add comprehensive unit tests (test_num_conv.cc):
   - Valid input tests for int, int64, unsigned types
   - Boundary values (INT_MIN, INT_MAX, etc.)
   - Error path coverage: empty strings, invalid input, overflow
   - Trailing character rejection tests
   - Leading whitespace rejection tests
   - Realistic usage: HTTP status codes, Content-Length parsing

2. Update benchmark to use new API properly:
   - Use from_string<int>(string_view) directly in response parsing
   - Remove unnecessary string allocation in optimized benchmark

3. Add exception documentation to num_conv.h:
   - Document throws behavior for from_string
   - Document strong exception guarantee

All 18 tests pass including 17 new num_conv tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,6 +49,7 @@ iqxmlrpc_test(perf-utils-test test_perf_utils.cc)
 iqxmlrpc_test(security-test test_security.cc)
 iqxmlrpc_test(crlf-injection-test test_crlf_injection.cc)
 iqxmlrpc_test(e1-e3-optimization-test test_e1_e3_optimization.cc)
+iqxmlrpc_test(num-conv-test test_num_conv.cc)
 
 # Thread safety tests
 # NOTE: These tests stress-test Boost.Lockfree which produces TSan false positives.
