--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -41,8 +41,9 @@ env:
   # Very high variance benchmarks (tier 2)
   # perf_string_to_int_new: extreme variance on CI (~70%)
   # Sub-nanosecond benchmarks: 1 clock cycle of jitter causes 30-100% swings
+  # perf_ssl_result_return_code: ~0.3ns, SSL result code check
   RELAXED_THRESHOLD_2: '70'
-  RELAXED_BENCHMARKS_2: 'perf_string_to_int_new,perf_atomic_bool_write,perf_type_check_int_false,perf_type_check_int_true,perf_type_check_string_true'
+  RELAXED_BENCHMARKS_2: 'perf_string_to_int_new,perf_atomic_bool_write,perf_type_check_int_false,perf_type_check_int_true,perf_type_check_string_true,perf_ssl_result_return_code'
 
 jobs:
   benchmark:
