Add early-return optimization for connection tracking and RPS benchmarking
Skip mutex locks in register/unregister_connection when idle timeout is
disabled (the default). This eliminates contention under high load while
preserving timeout functionality when enabled.

Also add standalone RPS benchmarking infrastructure:
- benchmark_server.cc: HTTP server for throughput testing
- rps_benchmark.py: Multi-threaded client measuring RPS and latency percentiles
- compare_versions.sh: Automated version comparison script

Performance is at parity with 0.13.8 baseline (within measurement variance).
All quality agents passed (code review, security, coverage, simplifier).

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -182,3 +182,9 @@ add_custom_target(interop-test
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     COMMENT "Running interoperability tests against Python XML-RPC server..."
 )
+
+# Standalone benchmark server for RPS testing (separate - run with ./benchmark-server)
+# Usage: ./benchmark-server --port 8080 --numthreads 4
+# Then run: python3 scripts/rps_benchmark.py --port 8080
+add_executable(benchmark-server benchmark_server.cc)
+target_link_libraries(benchmark-server iqxmlrpc ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES})
